no flicker on manualWidth now, reload highlight bug fixed, disabled set on master too as per UFD principle.
git-svn-id: http://ufd.googlecode.com/svn/trunk@137 9c53cf46-e557-11de-ab96-fd2e03e142b3

--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -46,6 +46,7 @@
 }
 
 .ufd.custom button.disabled {
+	color: black;
 	background-color: gray; 
 }
 
