--- a/css/plain/plain.css
+++ b/css/plain/plain.css
@@ -17,6 +17,7 @@
 }
 
 .ufd.plain input.disabled {
+	color: black;
     background-color: gray !important;
 }
 
