--- a/css/sexy/sexy.css
+++ b/css/sexy/sexy.css
@@ -19,6 +19,7 @@
 
 
 .ufd.sexy input.disabled {
+	color: black;
 	background-color: graytext;
 	background-image: none;
 }
